force-app/main/default/objects/NameUtilityMaster__c/NameUtilityMaster__c.object-meta.xml
<CustomObject>
    <description>สำหรับเก็บข้อมูล Backend value ต่างๆ เช่น Running Number</description>
    <label>Name Utility Master</label>
    <nameField>
        <displayFormat>UMD-{00000000}</displayFormat>
        <label>Utility Master Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>