force-app/main/default/objects/NameUtilityMaster__c/fields/RunningPurpose__c.field-meta.xml
<CustomField>
    <fullName>RunningPurpose__c</fullName>
    <label>Running Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>