force-app/main/default/objects/NameUtilityMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RunningKey__c</columns>
    <columns>RunningFormat__c</columns>
    <columns>CurrentRunningNumber__c</columns>
    <columns>ObjectName__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>