force-app/main/default/objects/NameUtilityMaster__c/listViews/Running_Format.listView-meta.xml
<ListView>
    <fullName>Running_Format</fullName>
    <columns>NAME</columns>
    <columns>RunningFormat__c</columns>
    <columns>ObjectName__c</columns>
    <columns>RunningPurpose__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Format</value>
    </filters>
    <label>Running Format</label>
</ListView>